# flyingsnake

./: .gitattributes  .gitignore  README.md  flyingsnake-completion.bash  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
flyingsnake/: __init__.py  __main__.py  default_colors.py  example_colors.json  get_colors.py
tests/: Small_Example.wld  test_flyingsnake.py
